donw with raw html

--- a/index.html
+++ b/index.html
@@ -1,33 +1,172 @@
 <!doctype html>
 <html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="description" content="" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="" />
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="icon.png" />
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+    <link rel="manifest" href="site.webmanifest" />
+    <meta name="theme-color" content="#fafafa" />
+    <script
+      src="https://kit.fontawesome.com/b502c362c1.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
-
-</body>
-
+  <body>
+    <!-- Navbar -->
+    <nav>
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <!-- Hero Section -->
+    <h2>Antonio Vinciguerra</h2>
+    <h5>Full-stack Web Developer</h5>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+    <!-- Project Section -->
+    <h2>Projects</h2>
+    <hr />
+    <h3>Morikoya</h3>
+    <p>
+      A hotel management web application for handling room availability,
+      reservations, and guest bookings.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • Stimulus</p>
+    <a href="">Live version coming soon...</a>
+    <a href="https://github.com/Antonio9194/morikoya" target="_blank">Github</a>
+    <hr />
+    <h3>Ivy</h3>
+    <p>
+      An AI-powered work assistant designed to streamline tasks and improve
+      productivity.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • Stimulus</p>
+    <a href="">Live version coming soon...</a>
+    <a href="https://github.com/Antonio9194/Ivy" target="_blank">Github</a>
+    <hr />
+    <h3>Ivy</h3>
+    <p>
+      A simple bot designed to ping web applications deployed on Render to keep
+      them active.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="https://github.com/Antonio9194/Bot" target="_blank">Github</a>
+    <hr />
+    <h3>Soul Bound</h3>
+    <p>
+      A gamified productivity and wellness web application that turns personal
+      goals into RPG-style quests and progression.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="">Live version coming soon...</a>
+    <a href="https://github.com/Antonio9194/soul-bound" target="_blank"
+      >Github</a
+    >
+    <hr />
+    <h3>Watch List</h3>
+    <p>
+      An application that allows users to save movies they want to watch and
+      organize them into customizable watchlists.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="https://rails-watch-list-38lm.onrender.com" target="_blank"
+      >Live</a
+    >
+    <a href="https://github.com/Antonio9194/rails-watch-list" target="_blank"
+      >Github</a
+    >
+    <hr />
+    <h3>Airbnb-like Marketplace</h3>
+    <p>
+      A full-stack marketplace web application enabling users to list, discover,
+      and book short-term accommodations.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="https://rails-simple-airbnb.onrender.com" target="_blank">Live</a>
+    <a href="https://github.com/Antonio9194/rails-simple-airbnb" target="_blank"
+      >Github</a
+    >
+    <hr />
+    <h3>Yelp-like Review Platform</h3>
+    <p>
+      A Ruby on Rails MVP that enables users to browse restaurants and submit
+      reviews in a Yelp-style platform.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="https://rails-yelp-mvp.onrender.com" target="_blank">Live</a>
+    <a href="https://github.com/Antonio9194/rails-yelp-mvp" target="_blank"
+      >Github</a
+    >
+    <hr />
+    <h3>Task Manager</h3>
+    <p>
+      A Ruby on Rails task manager web application enabling users to create,
+      update, and manage tasks efficiently.
+    </p>
+    <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+    <a href="https://rails-task-manager-wzj5.onrender.com/" target="_blank"
+      >Live</a
+    >
+    <a href="https://github.com/Antonio9194/rails-task-manager" target="_blank"
+      >Github</a
+    >
+    <hr />
+    <h3>Insurance Manager</h3>
+    <p>
+      An insurance management web application developed to help an insurance
+      company handle essential tasks and workflows.
+    </p>
+    <p>EJS • JavaScript</p>
+    <a href="https://github.com/Antonio9194/1.0-Insurance" target="_blank"
+      >Github</a
+    >
+    <!-- Skills Section -->
+    <h2>Skills</h2>
+    <h3>Frontend</h3>
+    <p>HTML • CSS • JavaScript • Stimulus</p>
+    <h3>Backend</h3>
+    <p>Ruby • Rails • PostgreSQL</p>
+    <script src="js/app.js"></script>
+    <!-- About Me -->
+    <h2>About Me</h2>
+    <h3>Who am I?</h3>
+    <p>
+      After 8 years managing hotel operations, I pursued my passion for coding
+      and completed the full-stack web development course at Le Wagon. Since
+      then, I’ve built multiple small projects, collaborating with other
+      developers, and most recently led the development of a hotel website as
+      team lead. I bring together real-world business experience and hands-on
+      technical skills to create practical, user-focused web applications.
+    </p>
+    <!-- Contanct Section -->
+    <h2>Contacts</h2>
+    <p>
+      <a href="mailto:anto.vinciguerra@hotmail.com"
+        ><i class="fa-regular fa-paper-plane"></i
+      ></a>
+      •
+      <a href="https://github.com/Antonio9194"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+      •
+      <a href="https://www.linkedin.com/in/yourprofile"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+    </p>
+  </body>
 </html>
