--- a/index.html
+++ b/index.html
@@ -1,184 +1,243 @@
 <!doctype html>
 <html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="description" content="" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
-  <link rel="stylesheet" href="css/style.css" />
-  <meta name="description" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="" />
 
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:image:alt" content="" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="icon.png" />
 
-  <link rel="icon" href="/favicon.ico" sizes="any" />
-  <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="theme-color" content="#fafafa" />
+    <script
+      src="https://kit.fontawesome.com/b502c362c1.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <link rel="manifest" href="site.webmanifest" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
-    rel="stylesheet" />
-  <meta name="theme-color" content="#fafafa" />
-  <script src="https://kit.fontawesome.com/b502c362c1.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <div class="container">
-
-    <div class="contact-section">
-      <img src="img/avatar.png" alt="avatar">
-      <div class="contact">
-        <!-- Contanct Section -->
-        <h2>Antonio Vinciguerra</h2>
-        <h5 class="role">Full-stack Web Developer</h5>
-        <p class="social">
-          <a class="github" href="https://github.com/Antonio9194" target="_blank"><i
-              class="fa-brands fa-github"></i></a>
-          <a class="linkedin" href="https://www.linkedin.com/in/yourprofile" target="_blank"><i
-              class="fa-brands fa-linkedin"></i></a>
-        </p>
-        <div class="info">
-          <div class="mail">
-            <i class="fa-regular fa-envelope"></i>
-            <a class="mailto" href="mailto:anto.vinciguerra@hotmail.com">
-              <h5>anto.vinciguerra@hotmail.com</h5>
-            </a>
+  <body>
+    <div class="container">
+      <div class="contact-section">
+        <img src="img/avatar.png" alt="avatar" />
+        <div class="contact">
+          <!-- Contanct Section -->
+          <h2>Antonio Vinciguerra</h2>
+          <h5 class="role">Full-stack Web Developer</h5>
+          <p class="social">
+            <a
+              class="github"
+              href="https://github.com/Antonio9194"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/in/yourprofile"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </p>
+          <div class="info">
+            <div class="mail">
+              <i class="fa-regular fa-envelope"></i>
+              <a class="mailto" href="mailto:anto.vinciguerra@hotmail.com">
+                <h5>anto.vinciguerra@hotmail.com</h5>
+              </a>
+            </div>
+            <hr />
+            <div class="location">
+              <i class="fa-solid fa-location-dot"></i>
+              <h5>Tokyo, Japan</h5>
+            </div>
+            <hr />
+            <div class="date">
+              <i class="fa-regular fa-calendar"></i>
+              <h5>14, SEP. 1991</h5>
+            </div>
           </div>
-          <hr>
-          <div class="location">
-            <i class="fa-solid fa-location-dot"></i>
-            <h5>Tokyo, Japan</h5>
-          </div>
-          <hr>
-          <div class="date">
-            <i class="fa-regular fa-calendar"></i>
-            <h5>14, SEP. 1991</h5>
+          <div class="cv">
+            <a href="img/CV.pdf" target="_blank">View Resume</a>
           </div>
         </div>
       </div>
 
+      <div class="main">
+        <!-- About Me -->
+        <div class="about" id="about">
+          <h2>About Me</h2>
+          <p>
+            I have always loved languages, which first led me to work in the
+            hospitality industry for 8 years, managing hotel operations and
+            developing strong communication and problem-solving skills while
+            interacting with people from around the world. Later, I decided to
+            explore a new kind of language—coding—and completed the full-stack
+            web development course at Le Wagon. Since then, I’ve built multiple
+            small projects, collaborated with other developers, and most
+            recently led the development of a hotel website as team lead. I
+            bring together real-world business experience and hands-on technical
+            skills to create practical, user-focused web applications.
+          </p>
+        </div>
+        <div class="project" id="project">
+          <!-- Project Section -->
+          <h2>Projects</h2>
+          <hr />
+          <h3>Morikoya</h3>
+          <p>
+            A hotel management web application for handling room availability,
+            reservations, and guest bookings.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • Stimulus</p>
+          <a href="">Live version coming soon...</a>
+          <a href="https://github.com/Antonio9194/morikoya" target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Ivy</h3>
+          <p>
+            An AI-powered work assistant designed to streamline tasks and
+            improve productivity.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • Stimulus</p>
+          <a href="">Live version coming soon...</a>
+          <a href="https://github.com/Antonio9194/Ivy" target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Ivy</h3>
+          <p>
+            A simple bot designed to ping web applications deployed on Render to
+            keep them active.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a href="https://github.com/Antonio9194/Bot" target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Soul Bound</h3>
+          <p>
+            A gamified productivity and wellness web application that turns
+            personal goals into RPG-style quests and progression.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a href="">Live version coming soon...</a>
+          <a href="https://github.com/Antonio9194/soul-bound" target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Watch List</h3>
+          <p>
+            An application that allows users to save movies they want to watch
+            and organize them into customizable watchlists.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a href="https://rails-watch-list-38lm.onrender.com" target="_blank"
+            >Live</a
+          >
+          <a
+            href="https://github.com/Antonio9194/rails-watch-list"
+            target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Airbnb-like Marketplace</h3>
+          <p>
+            A full-stack marketplace web application enabling users to list,
+            discover, and book short-term accommodations.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a href="https://rails-simple-airbnb.onrender.com" target="_blank"
+            >Live</a
+          >
+          <a
+            href="https://github.com/Antonio9194/rails-simple-airbnb"
+            target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Yelp-like Review Platform</h3>
+          <p>
+            A Ruby on Rails MVP that enables users to browse restaurants and
+            submit reviews in a Yelp-style platform.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a href="https://rails-yelp-mvp.onrender.com" target="_blank">Live</a>
+          <a
+            href="https://github.com/Antonio9194/rails-yelp-mvp"
+            target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Task Manager</h3>
+          <p>
+            A Ruby on Rails task manager web application enabling users to
+            create, update, and manage tasks efficiently.
+          </p>
+          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
+          <a
+            href="https://rails-task-manager-wzj5.onrender.com/"
+            target="_blank"
+            >Live</a
+          >
+          <a
+            href="https://github.com/Antonio9194/rails-task-manager"
+            target="_blank"
+            >Github</a
+          >
+          <hr />
+          <h3>Insurance Manager</h3>
+          <p>
+            An insurance management web application developed to help an
+            insurance company handle essential tasks and workflows.
+          </p>
+          <p>EJS • JavaScript</p>
+          <a href="https://github.com/Antonio9194/1.0-Insurance" target="_blank"
+            >Github</a
+          >
+        </div>
+        <div class="skills" id="skills">
+          <!-- Skills Section -->
+          <h2>Skills</h2>
+          <h3>Frontend</h3>
+          <p>HTML • CSS • JavaScript • Stimulus</p>
+          <h3>Backend</h3>
+          <p>Ruby • Rails • PostgreSQL</p>
+        </div>
+        <script src="js/app.js"></script>
+      </div>
+      <!-- Navbar -->
+      <div class="navbar">
+        <nav class="nav">
+          <div class="aboutnav">
+            <i class="fa-regular fa-address-card"></i>
+            <a href="#about">About</a>
+          </div>
+          <div class="aboutnav">
+            <i class="fa-solid fa-laptop-code"></i>
+            <a href="#projects">Projects</a>
+          </div>
+          <div class="aboutnav">
+            <i class="fa-solid fa-brain"></i>
+            <a href="#skills">Skills</a>
+          </div>
+        </nav>
+      </div>
     </div>
-
-    <div class="main">
-      <!-- Project Section -->
-      <h2>Projects</h2>
-      <hr />
-      <h3>Morikoya</h3>
-      <p>
-        A hotel management web application for handling room availability,
-        reservations, and guest bookings.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • Stimulus</p>
-      <a href="">Live version coming soon...</a>
-      <a href="https://github.com/Antonio9194/morikoya" target="_blank">Github</a>
-      <hr />
-      <h3>Ivy</h3>
-      <p>
-        An AI-powered work assistant designed to streamline tasks and improve
-        productivity.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • Stimulus</p>
-      <a href="">Live version coming soon...</a>
-      <a href="https://github.com/Antonio9194/Ivy" target="_blank">Github</a>
-      <hr />
-      <h3>Ivy</h3>
-      <p>
-        A simple bot designed to ping web applications deployed on Render to keep
-        them active.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="https://github.com/Antonio9194/Bot" target="_blank">Github</a>
-      <hr />
-      <h3>Soul Bound</h3>
-      <p>
-        A gamified productivity and wellness web application that turns personal
-        goals into RPG-style quests and progression.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="">Live version coming soon...</a>
-      <a href="https://github.com/Antonio9194/soul-bound" target="_blank">Github</a>
-      <hr />
-      <h3>Watch List</h3>
-      <p>
-        An application that allows users to save movies they want to watch and
-        organize them into customizable watchlists.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="https://rails-watch-list-38lm.onrender.com" target="_blank">Live</a>
-      <a href="https://github.com/Antonio9194/rails-watch-list" target="_blank">Github</a>
-      <hr />
-      <h3>Airbnb-like Marketplace</h3>
-      <p>
-        A full-stack marketplace web application enabling users to list, discover,
-        and book short-term accommodations.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="https://rails-simple-airbnb.onrender.com" target="_blank">Live</a>
-      <a href="https://github.com/Antonio9194/rails-simple-airbnb" target="_blank">Github</a>
-      <hr />
-      <h3>Yelp-like Review Platform</h3>
-      <p>
-        A Ruby on Rails MVP that enables users to browse restaurants and submit
-        reviews in a Yelp-style platform.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="https://rails-yelp-mvp.onrender.com" target="_blank">Live</a>
-      <a href="https://github.com/Antonio9194/rails-yelp-mvp" target="_blank">Github</a>
-      <hr />
-      <h3>Task Manager</h3>
-      <p>
-        A Ruby on Rails task manager web application enabling users to create,
-        update, and manage tasks efficiently.
-      </p>
-      <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-      <a href="https://rails-task-manager-wzj5.onrender.com/" target="_blank">Live</a>
-      <a href="https://github.com/Antonio9194/rails-task-manager" target="_blank">Github</a>
-      <hr />
-      <h3>Insurance Manager</h3>
-      <p>
-        An insurance management web application developed to help an insurance
-        company handle essential tasks and workflows.
-      </p>
-      <p>EJS • JavaScript</p>
-      <a href="https://github.com/Antonio9194/1.0-Insurance" target="_blank">Github</a>
-      <!-- Skills Section -->
-      <h2>Skills</h2>
-      <h3>Frontend</h3>
-      <p>HTML • CSS • JavaScript • Stimulus</p>
-      <h3>Backend</h3>
-      <p>Ruby • Rails • PostgreSQL</p>
-      <script src="js/app.js"></script>
-      <!-- About Me -->
-      <h2>About Me</h2>
-      <h3>Who am I?</h3>
-      <p>
-        After 8 years managing hotel operations, I pursued my passion for coding
-        and completed the full-stack web development course at Le Wagon. Since
-        then, I’ve built multiple small projects, collaborating with other
-        developers, and most recently led the development of a hotel website as
-        team lead. I bring together real-world business experience and hands-on
-        technical skills to create practical, user-focused web applications.
-      </p>
-
-    </div>
-    <!-- Navbar -->
-    <div class="navbar">
-      <nav>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#about">About</a>
-      </nav>
-    </div>
-
-  </div>
-
-
-</body>
-
+  </body>
 </html>
