done with about and projects

--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
                 <h5>anto.vinciguerra@hotmail.com</h5>
               </a>
             </div>
-            <hr />
             <div class="location">
               <i class="fa-solid fa-location-dot"></i>
               <h5>Tokyo, Japan</h5>
             </div>
-            <hr />
             <div class="date">
               <i class="fa-regular fa-calendar"></i>
               <h5>14, SEP. 1991</h5>
@@ -79,139 +77,242 @@
 
       <div class="main">
         <!-- About Me -->
-        <div class="about" id="about">
+        <div class="about-section" id="about">
           <h2>About Me</h2>
           <p>
-            I have always loved languages, which first led me to work in the
-            hospitality industry for 8 years, managing hotel operations and
-            developing strong communication and problem-solving skills while
-            interacting with people from around the world. Later, I decided to
-            explore a new kind of language—coding—and completed the full-stack
-            web development course at Le Wagon. Since then, I’ve built multiple
-            small projects, collaborated with other developers, and most
-            recently led the development of a hotel website as team lead. I
-            bring together real-world business experience and hands-on technical
-            skills to create practical, user-focused web applications.
+            I have always loved <strong>languages</strong>, which first led me
+            to work in the hospitality industry for <strong>8 years</strong>,
+            managing hotel operations and developing strong communication and
+            problem-solving skills while interacting with people from around the
+            world.
+          </p>
+
+          <p>
+            Later, I decided to explore a new kind of language—coding—and
+            completed the
+            <strong>full-stack web development</strong> course at
+            <strong> Le Wagon</strong>. Since then, I’ve built multiple small
+            projects, collaborated with other developers, and most recently led
+            the development of a hotel website as <strong>team lead</strong>.
+          </p>
+
+          <p>
+            I bring together <strong>real-world business experience</strong> and
+            hands-on technical skills to create practical,
+            <strong>user-focused</strong> web applications.
           </p>
         </div>
-        <div class="project" id="project">
+        <div class="project-section" id="project">
           <!-- Project Section -->
           <h2>Projects</h2>
-          <hr />
-          <h3>Morikoya</h3>
-          <p>
-            A hotel management web application for handling room availability,
-            reservations, and guest bookings.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • Stimulus</p>
-          <a href="">Live version coming soon...</a>
-          <a href="https://github.com/Antonio9194/morikoya" target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Ivy</h3>
-          <p>
-            An AI-powered work assistant designed to streamline tasks and
-            improve productivity.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • Stimulus</p>
-          <a href="">Live version coming soon...</a>
-          <a href="https://github.com/Antonio9194/Ivy" target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Ivy</h3>
-          <p>
-            A simple bot designed to ping web applications deployed on Render to
-            keep them active.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a href="https://github.com/Antonio9194/Bot" target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Soul Bound</h3>
-          <p>
-            A gamified productivity and wellness web application that turns
-            personal goals into RPG-style quests and progression.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a href="">Live version coming soon...</a>
-          <a href="https://github.com/Antonio9194/soul-bound" target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Watch List</h3>
-          <p>
-            An application that allows users to save movies they want to watch
-            and organize them into customizable watchlists.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a href="https://rails-watch-list-38lm.onrender.com" target="_blank"
-            >Live</a
-          >
-          <a
-            href="https://github.com/Antonio9194/rails-watch-list"
-            target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Airbnb-like Marketplace</h3>
-          <p>
-            A full-stack marketplace web application enabling users to list,
-            discover, and book short-term accommodations.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a href="https://rails-simple-airbnb.onrender.com" target="_blank"
-            >Live</a
-          >
-          <a
-            href="https://github.com/Antonio9194/rails-simple-airbnb"
-            target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Yelp-like Review Platform</h3>
-          <p>
-            A Ruby on Rails MVP that enables users to browse restaurants and
-            submit reviews in a Yelp-style platform.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a href="https://rails-yelp-mvp.onrender.com" target="_blank">Live</a>
-          <a
-            href="https://github.com/Antonio9194/rails-yelp-mvp"
-            target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Task Manager</h3>
-          <p>
-            A Ruby on Rails task manager web application enabling users to
-            create, update, and manage tasks efficiently.
-          </p>
-          <p>Ruby on Rails • PostgreSQL • JavaScript</p>
-          <a
-            href="https://rails-task-manager-wzj5.onrender.com/"
-            target="_blank"
-            >Live</a
-          >
-          <a
-            href="https://github.com/Antonio9194/rails-task-manager"
-            target="_blank"
-            >Github</a
-          >
-          <hr />
-          <h3>Insurance Manager</h3>
-          <p>
-            An insurance management web application developed to help an
-            insurance company handle essential tasks and workflows.
-          </p>
-          <p>EJS • JavaScript</p>
-          <a href="https://github.com/Antonio9194/1.0-Insurance" target="_blank"
-            >Github</a
-          >
+          <div class="projects">
+            <div class="project">
+              <h3>Morikoya</h3>
+              <p>
+                A hotel management web application for handling room
+                availability, reservations, and guest bookings.
+              </p>
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>Stimulus</span>
+              </div>
+              <div class="buttons">
+                <a href="">Live</a>
+                <a
+                  href="https://github.com/Antonio9194/morikoya"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+            <div class="project">
+              <h3>Ivy</h3>
+              <p>
+                An AI-powered work assistant designed to streamline tasks and
+                improve productivity.
+              </p>
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>Stimulus</span>
+              </div>
+              <div class="buttons">
+                <a href="">Live</a>
+                <a href="https://github.com/Antonio9194/Ivy" target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+            <div class="project">
+              <h3>Ping Bot</h3>
+              <p>
+                A simple bot designed to ping web applications deployed on
+                Render to keep them active.
+              </p>
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>Stimulus</span>
+              </div>
+              <div class="buttons">
+                <a href="https://github.com/Antonio9194/Bot" target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+            <div class="project">
+              <h3>Soul Bound</h3>
+              <p>
+                A gamified productivity and wellness web application that turns
+                personal goals into RPG-style quests and progression.
+              </p>
+
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>Stimulus</span>
+              </div>
+
+              <div class="buttons">
+                <a href="">Live</a>
+                <a
+                  href="https://github.com/Antonio9194/soul-bound"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+
+            <div class="project">
+              <h3>Watch List</h3>
+              <p>
+                An application that allows users to save movies they want to
+                watch and organize them into customizable watchlists.
+              </p>
+
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="buttons">
+                <a
+                  href="https://rails-watch-list-38lm.onrender.com"
+                  target="_blank"
+                  >Live</a
+                >
+                <a
+                  href="https://github.com/Antonio9194/rails-watch-list"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+
+            <div class="project">
+              <h3>Airbnb-like Marketplace</h3>
+              <p>
+                A full-stack marketplace web application enabling users to list,
+                discover, and book short-term accommodations.
+              </p>
+
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="buttons">
+                <a
+                  href="https://rails-simple-airbnb.onrender.com"
+                  target="_blank"
+                  >Live</a
+                >
+                <a
+                  href="https://github.com/Antonio9194/rails-simple-airbnb"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+
+            <div class="project">
+              <h3>Yelp-like Review Platform</h3>
+              <p>
+                A Ruby on Rails MVP that enables users to browse restaurants and
+                submit reviews in a Yelp-style platform.
+              </p>
+
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="buttons">
+                <a href="https://rails-yelp-mvp.onrender.com" target="_blank"
+                  >Live</a
+                >
+                <a
+                  href="https://github.com/Antonio9194/rails-yelp-mvp"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+
+            <div class="project">
+              <h3>Task Manager</h3>
+              <p>
+                A Ruby on Rails task manager web application enabling users to
+                create, update, and manage tasks efficiently.
+              </p>
+
+              <div class="stack">
+                <span>Ruby on Rails</span>
+                <span>PostgreSQL</span>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="buttons">
+                <a
+                  href="https://rails-task-manager-wzj5.onrender.com/"
+                  target="_blank"
+                  >Live</a
+                >
+                <a
+                  href="https://github.com/Antonio9194/rails-task-manager"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+
+            <div class="project">
+              <h3>Insurance Manager</h3>
+              <p>
+                An insurance management web application developed to help an
+                insurance company handle essential tasks and workflows.
+              </p>
+
+              <div class="stack">
+                <span>EJS</span>
+                <span>JavaScript</span>
+              </div>
+
+              <div class="buttons">
+                <a
+                  href="https://github.com/Antonio9194/1.0-Insurance"
+                  target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="skills" id="skills">
+        <div class="skills-section" id="skills">
           <!-- Skills Section -->
           <h2>Skills</h2>
           <h3>Frontend</h3>
