--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <meta property="og:image" content="" />
   <meta property="og:image:alt" content="" />
 
-  <link rel="icon" href="/favicon.ico" sizes="any" />
-  <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="icon.png" />
+  <link rel="icon" href="/smoke.ico" sizes="any" />
+  <link rel="icon" type="image/png" href="/smoke.png" />
+  <link rel="icon" type="image/svg+xml" href="/smoke.svg" />
+  <link rel="apple-touch-icon" href="/smoke.png" />
 
   <link rel="manifest" href="site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -259,24 +260,36 @@
         <!-- Skills Section -->
         <h2>Skills</h2>
         <div class="skills">
+
           <div class="skill">
             <h3>Frontend</h3>
-            <p>HTML • CSS • JavaScript • Stimulus</p>
+            <div class="stack">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+              <span>Bootstrap</span>
+              <span>Stimulus</span>
+            </div>
           </div>
 
           <div class="skill">
             <h3>Backend</h3>
-            <p>Ruby • Rails</p>
+            <div class="stack">
+              <span>Ruby</span>
+              <span>Rails</span>
+            </div>
           </div>
 
           <div class="skill">
-            <h3>Database</h3>
-            <p>PostgreSQL</p>
-          </div>
-
-          <div class="skill"
-            <h3>Tools</h3>
-            <p>Figma • Postman • Git • GitHub</p>
+            <h3>Database & Tools</h3>
+            <div class="stack">
+              <span>PostgreSQL</span>
+              <span>Figma</span>
+              <span>Postman</span>
+              <span>Github</span>
+              <span>Heroku</span>
+              <span>Render</span>
+            </div>
           </div>
         </div>
 
