--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <link rel="stylesheet" href="css/style.css" />
-    <meta name="description" content="" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:image:alt" content="" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title></title>
+  <link rel="stylesheet" href="css/style.css" />
+  <meta name="description" content="" />
 
-    <!-- <link rel="icon" href="/smoke.ico" sizes="any" /> -->
-    <link rel="icon" type="image/png" href="/smoke.png" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/smoke.svg" /> -->
-    <link rel="apple-touch-icon" href="/smoke.png" />
+  <meta property="og:title" content="" />
+  <meta property="og:type" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:image" content="" />
+  <meta property="og:image:alt" content="" />
 
-    <link rel="manifest" href="site.webmanifest" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="theme-color" content="#fafafa" />
-    <script
-      src="https://kit.fontawesome.com/b502c362c1.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <!-- <link rel="icon" href="/smoke.ico" sizes="any" /> -->
+  <link rel="icon" type="image/png" href="/smoke.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/smoke.svg" /> -->
+  <link rel="apple-touch-icon" href="/smoke.png" />
 
-  <body>
+  <link rel="manifest" href="site.webmanifest" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap"
+    rel="stylesheet" />
+  <meta name="theme-color" content="#fafafa" />
+  <script src="https://kit.fontawesome.com/b502c362c1.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="media">
     <div class="container">
       <div class="contact-section">
         <img src="img/avatar.png" alt="avatar" />
@@ -41,18 +39,10 @@
           <h2>Antonio Vinciguerra</h2>
           <h5 class="role">Full-stack Web Developer</h5>
           <p class="social">
-            <a
-              class="github"
-              href="https://github.com/Antonio9194"
-              target="_blank"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-            <a
-              class="linkedin"
-              href="https://www.linkedin.com/in/yourprofile"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+            <a class="github" href="https://github.com/Antonio9194" target="_blank"><i
+                class="fa-brands fa-github"></i></a>
+            <a class="linkedin" href="https://www.linkedin.com/in/yourprofile" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>
           </p>
           <div class="info">
             <div class="mail">
@@ -119,16 +109,8 @@
                 <span>Stimulus</span>
               </div>
               <div class="buttons">
-                <a
-                  href="https://morikoya-3311853fd76f.herokuapp.com/"
-                  target="_blank"
-                  >Live</a
-                >
-                <a
-                  href="https://github.com/Antonio9194/morikoya"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://morikoya-3311853fd76f.herokuapp.com/" target="_blank">Live</a>
+                <a href="https://github.com/Antonio9194/morikoya" target="_blank">Github</a>
               </div>
             </div>
             <div class="project">
@@ -144,9 +126,7 @@
               </div>
               <div class="buttons">
                 <a href="">Coming Soon</a>
-                <a href="https://github.com/Antonio9194/Ivy" target="_blank"
-                  >Github</a
-                >
+                <a href="https://github.com/Antonio9194/Ivy" target="_blank">Github</a>
               </div>
             </div>
             <div class="project">
@@ -161,9 +141,7 @@
                 <span>Stimulus</span>
               </div>
               <div class="buttons">
-                <a href="https://github.com/Antonio9194/Bot" target="_blank"
-                  >Github</a
-                >
+                <a href="https://github.com/Antonio9194/Bot" target="_blank">Github</a>
               </div>
             </div>
             <div class="project">
@@ -181,11 +159,7 @@
 
               <div class="buttons">
                 <a href="">Coming Soon</a>
-                <a
-                  href="https://github.com/Antonio9194/soul-bound"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://github.com/Antonio9194/soul-bound" target="_blank">Github</a>
               </div>
             </div>
 
@@ -203,16 +177,8 @@
               </div>
 
               <div class="buttons">
-                <a
-                  href="https://rails-watch-list-38lm.onrender.com"
-                  target="_blank"
-                  >Live</a
-                >
-                <a
-                  href="https://github.com/Antonio9194/rails-watch-list"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://rails-watch-list-38lm.onrender.com" target="_blank">Live</a>
+                <a href="https://github.com/Antonio9194/rails-watch-list" target="_blank">Github</a>
               </div>
             </div>
 
@@ -230,16 +196,8 @@
               </div>
 
               <div class="buttons">
-                <a
-                  href="https://rails-simple-airbnb.onrender.com"
-                  target="_blank"
-                  >Live</a
-                >
-                <a
-                  href="https://github.com/Antonio9194/rails-simple-airbnb"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://rails-simple-airbnb.onrender.com" target="_blank">Live</a>
+                <a href="https://github.com/Antonio9194/rails-simple-airbnb" target="_blank">Github</a>
               </div>
             </div>
 
@@ -257,14 +215,8 @@
               </div>
 
               <div class="buttons">
-                <a href="https://rails-yelp-mvp.onrender.com" target="_blank"
-                  >Live</a
-                >
-                <a
-                  href="https://github.com/Antonio9194/rails-yelp-mvp"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://rails-yelp-mvp.onrender.com" target="_blank">Live</a>
+                <a href="https://github.com/Antonio9194/rails-yelp-mvp" target="_blank">Github</a>
               </div>
             </div>
 
@@ -282,16 +234,8 @@
               </div>
 
               <div class="buttons">
-                <a
-                  href="https://rails-task-manager-wzj5.onrender.com/"
-                  target="_blank"
-                  >Live</a
-                >
-                <a
-                  href="https://github.com/Antonio9194/rails-task-manager"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://rails-task-manager-wzj5.onrender.com/" target="_blank">Live</a>
+                <a href="https://github.com/Antonio9194/rails-task-manager" target="_blank">Github</a>
               </div>
             </div>
 
@@ -308,11 +252,7 @@
               </div>
 
               <div class="buttons">
-                <a
-                  href="https://github.com/Antonio9194/1.0-Insurance"
-                  target="_blank"
-                  >Github</a
-                >
+                <a href="https://github.com/Antonio9194/1.0-Insurance" target="_blank">Github</a>
               </div>
             </div>
           </div>
@@ -373,5 +313,8 @@
         </nav>
       </div>
     </div>
-  </body>
+
+  </div>
+</body>
+
 </html>
